--- a/package.json
+++ b/package.json
@@ -1,54 +1,52 @@
-{
-  "name": "helioslauncher",
-  "version": "1.9.0",
-  "productName": "Helios Launcher",
-  "description": "Modded Minecraft Launcher",
-  "author": "Daniel Scalzi (https://github.com/dscalzi/)",
+ {
+  "name": "survivalminerslauncher",
+  "version": "1.7.0",
+  "productName": "Survival Miners launcher",
+  "description": "Serveur survie moddée amuser vous bien!",
+  "author": "Daniel Scalzi (https://github.com/dscalzi/) et John",
   "license": "UNLICENSED",
-  "homepage": "https://github.com/dscalzi/HeliosLauncher",
+  "homepage": "https://github.com/JohnTheFake/SurvivalMinersX",
   "bugs": {
-    "url": "https://github.com/dscalzi/HeliosLauncher/issues"
+    "url": "https://github.com/JohnThefake/SurvivalMinersX/issues"
   },
   "private": true,
   "main": "index.js",
   "scripts": {
     "start": "electron .",
-    "dist": "electron-builder build",
-    "dist:win": "npm run dist -- -w",
-    "dist:mac": "npm run dist -- -m",
-    "dist:linux": "npm run dist -- -l",
+    "cilinux": "node build.js WINDOWS && node build.js LINUX",
+    "cidarwin": "node build.js MAC",
+    "dist": "cross-env ELECTRON_BUILDER_ALLOW_UNRESOLVED_DEPENDENCIES=true node build.js",
+    "dist:win": "npm run dist -- WINDOWS",
+    "dist:mac": "npm run dist -- MAC",
+    "dist:linux": "npm run dist -- LINUX",
     "lint": "eslint --config .eslintrc.json ."
   },
   "engines": {
-    "node": "16.x.x"
+    "node": "12.x.x"
   },
   "dependencies": {
-    "@electron/remote": "^2.0.8",
-    "adm-zip": "^0.5.9",
-    "async": "^3.2.4",
-    "discord-rpc-patch": "^4.0.1",
-    "ejs": "^3.1.8",
-    "ejs-electron": "^2.1.1",
-    "electron-updater": "^5.3.0",
-    "fs-extra": "^11.1.0",
+    "adm-zip": "^0.4.14",
+    "async": "^3.2.0",
+    "discord-rpc": "^3.1.1",
+    "ejs": "^3.1.3",
+    "ejs-electron": "^2.0.3",
+    "electron-updater": "^4.3.1",
+    "fs-extra": "^9.0.1",
     "github-syntax-dark": "^0.5.0",
-    "got": "^11.8.5",
-    "helios-core": "~0.1.2",
-    "jquery": "^3.6.1",
-    "node-disk-info": "^1.3.0",
-    "node-stream-zip": "^1.15.0",
+    "jquery": "^3.5.1",
     "request": "^2.88.2",
-    "semver": "^7.3.8",
-    "tar-fs": "^2.1.1",
+    "semver": "^7.3.2",
+    "tar-fs": "^2.1.0",
     "winreg": "^1.2.4"
   },
   "devDependencies": {
-    "electron": "^22.0.0",
-    "electron-builder": "^23.6.0",
-    "eslint": "^8.30.0"
+    "cross-env": "^7.0.2",
+    "electron": "^9.0.3",
+    "electron-builder": "^22.7.0",
+    "eslint": "^7.2.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dscalzi/HeliosLauncher.git"
+    "url": "git+https://github.com/JohnTheFake/SurvivalMinersX.git"
   }
 }
